# FinSync

./: .gitignore  CMakeLists.txt  FinSync.cpp  FinSyncWin32_Fixed.cpp  README.md  build.bat
